<resources>
    <string name="app_name">UsandoSQLite</string>
    <string name="action_settings">Settings</string>

    <string name="codigo">Código:</string>
    <string name="nome_disciplina">Nome da Disciplina:</string>
    <string name="nota">Nota:</string>
    <string name="incluir">Incluir</string>
    <string name="alterar">Alterar</string>
    <string name="exlcluir">Excluir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="listar">Listar</string>
    <string name="titulo">Lista de Disciplinas</string>

    <string name="title_activity_lista">ListaActivity</string>
</resources>
